Revision history for perl distribution Mojolicious-Plugin-Bootstrap3

3.3500 Not Released
 - Merged with Bootstrap v3.3.5

3.3007 2015-04-18T13:14:02+0200
 - Improved documentation
 - Compatible with AssetPack 0.44

3.3006 2015-03-16T13:52:31Z
 - Add support for easy customization
 - Merged with Bootstrap v3.3.3
 - Add support for themes

3.2005 2014-10-10T09:46:03Z
 - Will not run 00-copy.t on install
 - Fix fonts location

3.2004 2014-10-09T15:13:47Z
 - Require AssetPack 0.31 to function properly without Sass

3.2003 2014-10-08T21:57:02Z
 - Rewrote module (Same API)
 - Require AssetPack 0.30

3.2002 2014-10-07T00:20:37Z
 - Require AssetPack 0.26

3.2001 2014-10-05T22:44:30Z
 - Require AssetPack 0.24

3.2000 2014-08-08T11:18:36Z
 - Add demo.pl for visual verification
 - Merged with Bootstrap v3.2.0
   https://github.com/twbs/bootstrap-sass/commit/a5f5954268779ce0faf7607b3c
   35191a8d0fdfe6

3.1007 2014-03-22T19:17:31Z
 - Fix popover.js require tooltip.js

3.1006 2014-03-22T18:29:52Z
 - Fix documentation

3.1005 2014-03-22T18:10:14Z
 - Fix unittests

3.1004 2014-03-22T15:53:57Z
 - Fix missing _field-with-error.scss file

3.1003 2014-03-22T15:32:02Z
 - Add _field-with-error.scss

3.1002 2014-03-08T19:03:05Z
 - Fix missing "t/public/packed" directory

3.1001 2014-03-07T14:28:50Z
 - Started project
 - Bundled Bootstrap 3.1.1 as packed and unpacked
 - Bundled http://code.jquery.com/jquery-1.11.0.min.js
