@@ -1,4 +1,3 @@
 # You can install this projct with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/mojolicious-plugin-bootstrap3/archive/master.tar.gz
-requires "Mojolicious" => "5.00";
-requires "Mojolicious::Plugin::AssetPack" => "0.31";
+requires "Mojolicious::Plugin::AssetPack" => "0.58";
 test_requires "Test::More" => "0.88";
